# network-distributed-q-learning

./: .gitignore  README.md  eval.py  hyperparam_tuning.py  main.py  plot.ipynb  pyproject.toml  requirements.txt  test_model.py
flatland_patch/: agent_utils.py  distance_map.py  timetable_generators.py
switchfl/: README.md  __init__.py  distr_q.py  observer.py  rail_network.py  reward_func.py  spaces.py  switch_agents.py  switch_env.py
switchfl/utils/: build_env.py  casting.py  logging.py  naming.py  plot.py  rail_graph.py  switch_agent.py
test/: simple_transition_test.py  test_comprehensive_edge_cases.py  test_seed_consistency.py  test_simple_deviation.py  test_switch_edge_cases.py  test_swtich2rail_actions.py  test_targeted_deviation.py  test_train_deviation.py  test_transition.py
