[project]
name = "switchfl"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Uhrich",email = "robin.uhrich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (<2)",
    "pyarray (>=0.2,<0.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "flatland-rl (>=4.0.6,<4.2.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "pettingzoo (>=1.25.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"      
]

[project.optional-dependencies]
plotting = ["matplotlib (>=3.10.1,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
